Removed reference to Freckl.es

--- a/2k16-Sticky_sticky/templates/form.html.j2
+++ b/2k16-Sticky_sticky/templates/form.html.j2
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Freckles sharing site">
-  <meta name="author" content="Pamela Lillian Isley">
+  <meta name="description" content="NDH Challenge">
+  <meta name="author" content="@the_mandarine">
   <title>Sticky! Sticky!</title>
   <link href="/static/css/bootstrap.min.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
